--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
     "vant": "^2.11.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.24.5",
