--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "testus": "vue-cli-service serve --mode testus",
     "build:dev": "vue-cli-service build --mode dev",
     "build:testus": "vue-cli-service build --mode testus",
+    "build:production": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
     "start": "npm run dev"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "compression-webpack-plugin": "^5.0.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "vant": "^2.11.0",
@@ -30,9 +32,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^5.0.0",
-    "postcss-px-to-viewport": "^1.1.1",
     "sass-loader": "^10.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
