--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "webtemplate",
-  "version": "0.1.0",
+  "name": "xxl-resume",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --mode dev",
-    "testus": "vue-cli-service serve --mode testus",
-    "build:dev": "vue-cli-service build --mode dev",
-    "build:testus": "vue-cli-service build --mode testus",
-    "build:production": "vue-cli-service build --mode production",
-    "lint": "vue-cli-service lint",
-    "start": "npm run dev"
+    "start": "npm run serve",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "compression-webpack-plugin": "^5.0.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
-    "vant": "^2.11.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.24.5",
     "vue-router": "^3.4.9",
